# milliqanOffline

./: .gitignore  .gitlab-ci.yml  .rootlogon.C  Dockerfile  MilliDAQ.git  README.md  SimTree.h  add_hsdata.cpp  add_hsdata_wrapper.py  analysisCI.py  compile.C  compile.sh  config.py  findEvents.py  findEventsDRS.py  mQContainer.def  makeDisplays.py  make_tree.C  mix_events.C  plotHists.C  processFillReport.py  processRun.py  runMakeTree.py  simple_macro.C  submitAllRuns.py  temp.txt  temp1.txt  temp2.txt  temp3.txt  temp_DarkRate_minusHV.txt  temp_DarkRate_minusHV_lpw.txt  temp_DarkRate_plusHV.txt  temp_DarkRate_plusHV_lpw.txt  top  topUpRun.py  treesV19Template.h  utilities.h  wrapper.sh
Run2Demonstrator/: add_hsdata.cpp  channelHVLU.py  compile.sh  (+15 more)
Run3Detector/analysis/pulseInjection/GAN/: README.md  gan.py  ganv2.py  generate.py  main.py  main.py~  polaris.yml  preprocessing.py  requirements.txt  setup.cfg  utilities.py  waveformAnalysis.ipynb  waveform_processing.py
Run3Detector/analysis/pulseInjection/GAN/Lib/: gan.py  preprocessing.py  utilities.py
Run3Detector/analysis/pulseInjection/GAN/Src/: evaluate_gan.py  generate.py  load_model.py  main.py  processData.py
Run3Detector/analysis/pulseInjection/GAN/Util/: area_distribution.py  gpu_training.sub  numpy.def
Run3Detector/analysis/pulseInjection/GAN/lib/: gan.py
Run3Detector/analysis/pulseInjection/GAN/lib/local_gan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Run3Detector/analysis/pulseInjection/GAN/src/: generate.py  main.py  test.py
Run3Detector/analysis/pulseInjection/GAN/util/: condor.sub
(+1977 files in other folders)
