[metadata]
name = local_gan
version = 0.1.0

[options]
package_dir =
    = lib
packages = find:
python_requires = >=3.6
install_requires =
    # List your package dependencies here, for example:
    numpy
    matplotlib
    tensorflow
    scipy
    uproot
    tensorflow_probability
    tf_keras


[options.packages.find]
where = lib


